@@ -1146,6 +1146,8 @@ Version 0.2.3
 * добавлена поддержка m4a-файлов в сканере ReplayGain
 * добавлен модуль вывода WASAPI
 * добавлена поддержка https в модуле http
+* добавлена поддержка wildmidi 0.4.0
+* добавлена поддержка форматов XMIDI и MUS (от id Software)
 * улучшен интерфейс с поддержкой обложек:
   - отображение информации о треке при двойном клике по названию композиции в главном окне (Thomas Perl)
   - улучшен таймер в "минимальном" режиме (Thomas Perl)
